Correction of the layout of the file list-finaliza-pedido.html and treatment of line break the observations of the order

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,6 +277,18 @@ background-color: #D8D8A8;
   word-wrap:break-word;
 }
 
+.order-resum-item{
+  width: 300px;
+  max-width: 200px;
+  table-layout:fixed;
+  word-wrap:break-word;
+}
+
+.order-obs-item{
+  max-width: 200px;
+  word-wrap:break-word;
+}
+
 .container-progress{
   width: 100%;
   height: 60px;
